# cangjie_compiler

./: .gitignore  CMakeLists.txt  README.OpenSource  README.md  README_zh.md  build.py
.gitcode/: CODEOWNERS
.gitcode/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml  question.yml
.gitcode/PULL_REQUEST_TEMPLATE/: PULL_REQUEST_TEMPLATE.md  PULL_REQUEST_TEMPLATE_chinese.md
cmake/: android_arm32_toolchain.cmake  linux_toolchain.cmake
demangler/: CMakeLists.txt  DeCompression.cpp  Demangler.cpp  Demangler.h  StdString.h
doc/: Standalone_Build_Guide.md  Standalone_Build_Guide_EN.md
schema/: ModuleFormat.fbs  NodeFormat.fbs  PackageFormat.fbs
src/: CMakeLists.txt  main-chir-dis.cpp  main-macrosrv.cpp  main.cpp
src/AST/: ASTContext.cpp  (+10 more)
src/Basic/: CMakeLists.txt  DiagnosticEmitter.cpp  DiagnosticEmitterImpl.h  DiagnosticEngine.cpp  DiagnosticEngineImpl.cpp  DiagnosticEngineImpl.h  InteropCJPackageConfigReader.cpp  MacroCallDiagInfo.cpp  SourceManager.cpp
src/CHIR/: Annotation.cpp  CHIR.cpp  CHIRChecker.cpp  CMakeLists.txt  UserDefinedType.cpp  Utils.cpp
src/CHIR/AST2CHIR/: AST2CHIR.cpp  AST2CHIRChecker.cpp  ASTPackage2CHIR.cpp  GlobalDeclAnalysis.cpp  GlobalVarInitializer.cpp  ImplicitImportedFuncMgr.cpp  MarkClassHasInited.cpp  Utils.cpp
src/CHIR/AST2CHIR/CollectLocalConstDecl/: CollectLocalConstDecl.cpp
src/CHIR/AST2CHIR/TranslateASTNode/: TranslateAnnotation.cpp  TranslateArrayExpr.cpp  TranslateArrayLit.cpp  TranslateAssignExpr.cpp  TranslateBinaryExpr.cpp  TranslateBlock.cpp  TranslateCallExpr.cpp  TranslateClassDecl.cpp  TranslateEnumDecl.cpp  TranslateExtendDecl.cpp  TranslateForInExpr.cpp  TranslateFuncArg.cpp  TranslateFuncDecl.cpp  TranslateIfExpr.cpp  TranslateJumpExpr.cpp  TranslateLambdaExpr.cpp  TranslateLitConstExpr.cpp  TranslateMatchExpr.cpp  TranslateMemberAccess.cpp  TranslatePointerExpr.cpp  TranslateRefExpr.cpp  TranslateReturnExpr.cpp  TranslateSpawnExpr.cpp  TranslateStructDecl.cpp  TranslateSubscriptExpr.cpp  TranslateTryExpr.cpp  TranslateTupleLit.cpp  TranslateTypeConvExpr.cpp  TranslateUnaryExpr.cpp  TranslateVarDecl.cpp  TranslateVarWithPatternDecl.cpp  Translator.cpp
src/CHIR/Analysis/: CallGraphAnalysis.cpp  ConstAnalysis.cpp  ConstAnalysisWrapper.cpp  ConstMemberVarCollector.cpp  DevirtualizationInfo.cpp  GetOrThrowResultAnalysis.cpp  MaybeInitAnalysis.cpp  MaybeUninitAnalysis.cpp  ReachingDefinitionAnalysis.cpp  TypeAnalysis.cpp  Utils.cpp  ValueAnalysis.cpp  ValueDomain.cpp  ValueRangeAnalysis.cpp
src/CHIR/Checker/: AnnotationChecker.cpp  CHIRChecker.cpp  CMakeLists.txt  ComputeAnnotations.cpp  OverflowChecking.cpp  TypeCastCheck.cpp  UnreachableBranchCheck.cpp  VarInitCheck.cpp
src/CHIR/Expression/: Expression.cpp  Terminator.cpp
src/CHIR/GenerateVTable/: GenerateVTable.cpp  UpdateOperatorVTable.cpp  VTableGenerator.cpp  WrapVirtualFunc.cpp
src/CHIR/IR/: AnnoInfo.cpp  Annotation.cpp  AttributeInfo.cpp  Base.cpp  CHIRBuilder.cpp  CHIRContext.cpp  CMakeLists.txt  DebugLocation.cpp  Package.cpp
src/CHIR/IR/Expression/: CMakeLists.txt  Expression.cpp  ExpressionWrapper.cpp  Terminator.cpp
src/CHIR/IR/Type/: CHIRType.cpp  CMakeLists.txt  ClassDef.cpp  CustomTypeDef.cpp  EnumDef.cpp  ExtendDef.cpp  PrivateTypeConverter.cpp  StructDef.cpp  Type.cpp
src/CHIR/IR/Value/: CMakeLists.txt  LiteralValue.cpp  Value.cpp
src/CHIR/Interpreter/: BCHIRIntrinsic.cpp  BCHIRPrinter.cpp  CHIR2BCHIR.cpp  ConstEval.cpp
src/CHIR/Interpreter/CHIR2BCHIR/: TranslateIntrinsic.cpp  TranslateMemoryExpression.cpp  TranslateOthersExpression.cpp  TranslateTerminatorExpression.cpp  TranslateValue.cpp
src/CHIR/Optimization/: ArrayLambdaOpt.cpp  ArrayListConstStartOpt.cpp  BlockGroupCopyHelper.cpp  CMakeLists.txt  ConstPropagation.cpp  DeadCodeElimination.cpp  Devirtualization.cpp  FunctionInline.cpp  GetRefToArrayElem.cpp  LambdaInline.cpp  MergeBlocks.cpp  OptFuncRetType.cpp  RangePropagation.cpp  RedundantFutureRemoval.cpp  RedundantGetOrThrowElimination.cpp  RedundantLoadElimination.cpp  UnitUnify.cpp  UselessAllocateElimination.cpp
src/CHIR/Serializer/: CHIRDeserializer.cpp  CHIRDeserializerImpl.h  CHIRSerializer.cpp  CHIRSerializerImpl.h
src/CHIR/Transformation/: BoxRecursionValueType.cpp  CMakeLists.txt  ClosureConversion.cpp  CreateExtendDefForImportedParent.cpp  DeadCodeElimination.cpp  Devirtualization.cpp  FlatForInExpr.cpp  NoSideEffectMarker.cpp  ReplaceSrcCodeImportedVal.cpp  SanitizerCoverage.cpp  UpdateMemberVarPath.cpp
src/CHIR/Transformation/GenerateVTable/: CMakeLists.txt  GenerateVTable.cpp  UpdateOperatorVTable.cpp  VTableGenerator.cpp  WrapMutFunc.cpp  WrapVirtualFunc.cpp
src/CHIR/Type/: CustomTypeDef.cpp  PrivateTypeConverter.cpp  Type.cpp
src/CHIR/Utils/: CHIRPrinter.cpp  CMakeLists.txt  StringWrapper.cpp  ToStringUtils.cpp  UserDefinedType.cpp  Utils.cpp
src/CHIR/Utils/Visitor/: CMakeLists.txt  SimpleIterator.cpp
src/CodeGen/IncrementalGen/: CMakeLists.txt  IncrementalGen.cpp
src/Mangle/: ASTMangler.cpp  BaseMangler.cpp  CHIRManglingUtils.cpp  CHIRTypeManglingUtils.cpp  CMakeLists.txt  Compression.cpp
src/Parse/: ASTChecker.cpp  ASTHasher.cpp  AttachComment.cpp  CMakeLists.txt  ParseAtom.cpp  ParseDecl.cpp  ParseExpr.cpp  ParseMacro.cpp  ParseType.cpp  ParserDiag.cpp  ParserImpl.h  ParserUtils.cpp
src/Parse/NativeFFI/: FFIParserImpl.cpp
src/Parse/NativeFFI/ObjC/: ParserDiag.cpp
unittests/AST/: ASTToSourceTest.cpp  CMakeLists.txt  CloneTest.cpp  SearchPlusTest.cpp  SearchTest.cpp  ToStringTest.cpp
unittests/CHIR/: ActiveStatePoolTest.cpp  AnalysisToStringTest.cpp  ArithmeticTest.cpp  CHIRDeSerialzierTest.cpp  CHIRSerialzierTest.cpp  CMakeLists.txt  ConstantRangeTest.cpp  SIntDomainTest.cpp  SIntTest.cpp
unittests/CodeGen/: CGTest.h  CMakeLists.txt  MangleTypeTest.cpp
unittests/Parse/: CMakeLists.txt  CheckCjdTest.cpp  ParseCommentTest.cpp  ParseCommentTest2.cpp  ParseIncrTest.cpp  ParserTest.cpp
unittests/Parse/ParseCangjieFiles/: good.cj.d  twoerrors.cj.d
unittests/Sema/: APILevelVersionTest.cpp  CMakeLists.txt  CommentsTest.cpp  GenericTest.cpp  ParseJsonTest.cpp  TypeCheckerTest.cpp
(+519 files in other folders)
